Update to current personal website

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 								<li><a href="#"><i class="icon fa-instagram">&nbsp;</i></a></li>
 							</ul>
 						</section>
-						&copy; 2020 <a href="https://chukwudumebi.ninja">Chukwudumebi E. Onwuli</a>.
+						&copy; 2020 <a href="https://chukwudumebi.me">Chukwudumebi E. Onwuli</a>.
 					</div>
 				</div>
 			</footer>
