--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
 		<title>Elaborate Solutions Limited</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="title" content="Elaborate Solutions Limited">
+		<meta name="description" content="Established in 2004 (RC: 384949), Elaborate Solutions Limited is an international freight forwarding and shipping service in Nigeria.">
+		<meta name="keywords" content="shipping, cargo, nigeria, haulage, freight, air, road, delivery">
+		<meta name="robots" content="index, follow">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta name="language" content="English">
+		<meta name="author" content="Nnamdi Patrick Onwuli">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
@@ -165,7 +170,7 @@
 			</header>
 			<section class="wrapper">
 				<div class="inner">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15855.039514276374!2d3.3142709585652534!3d6.5519707241770995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8e16a5228105%3A0x39ea175610926bd6!2s26b%20Stella%20Sholanke%20St%2C%20Ajao%20Estate%2C%20Lagos!5e0!3m2!1sen!2sng!4v1574241412489!5m2!1sen!2sng" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+					<iframe title="Google Maps URL" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15855.039514276374!2d3.3142709585652534!3d6.5519707241770995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8e16a5228105%3A0x39ea175610926bd6!2s26b%20Stella%20Sholanke%20St%2C%20Ajao%20Estate%2C%20Lagos!5e0!3m2!1sen!2sng!4v1574241412489!5m2!1sen!2sng" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 				</div>
 			</section>
 
